# wrlc-fastapi-webhook

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  secret.sh
.github/workflows/: flake8.yml  mypy.yml  pylint.yml
Models/: Email.py
etc/nginx/sites-available/: wrlc-fastapi-webhook.conf
etc/systemd/system/: wrlc-fastapi-webhook.service
models/: __init__.py  message.py  reponse.py
var/log/: README.md
