[tool.poetry]
name = "wrlc-fastapi-webhook"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.7"}
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
mypy = "^1.14.1"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
