[tool.poetry]
name = "wrlc-fastapi-webhook"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.7"}
gunicorn = "^23.0.0"
email-validator = "^2.2.0"
fastapi-cli = "^0.0.7"
httptools = "^0.6.4"
httpx = "^0.28.1"
jinja2 = "^3.1.6"
pipdeptree = "^2.25.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.20"
pyyaml = "^6.0.2"
setuptools = "^75.8.2"
uvloop = "^0.21.0"
watchfiles = "^1.0.4"
websockets = "^15.0.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
mypy = "^1.14.1"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
